fix: remove scrollbars when the menu is open

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,6 @@
 html {
     @include colors;
     scroll-behavior: smooth;
-    overflow-y: scroll;
 }
 
 body {
